--- a/Code opfrissen/style.css
+++ b/Code opfrissen/style.css
@@ -51,6 +51,20 @@ body, html {
     color: gray;
 }
 
+/* Add styles for the search input animation */
+.search-input {
+    display: none;
+    width: 0;
+    overflow: hidden;
+    transition: width 0.3s ease-in-out;
+}
+
+.search-input.active {
+    display: block;
+    width: 200px; /* Adjust the width as needed */
+}
+
+
 #logo {
     margin-top: 20%;
     width: 70%;
