--- a/Herhaling HTML-CSS Hero Header/style.css
+++ b/Herhaling HTML-CSS Hero Header/style.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
-body, ul {
+body {
     margin: 0;
     padding: 0;
     background: linear-gradient(to top right, rgba(37, 37, 37, 1), rgba(37, 37, 37, 1));
+}
+
+body, ul, nav a, .intro-title, .intro-description, .intro-button {
+    font-family: 'Poppins', sans-serif;
+}
+
+.intro-description, .intro-button {
+    font-weight: 400;
 }
 
 header {
@@ -39,7 +47,6 @@ nav a {
     text-decoration: none;
     color: #fff;
     font-weight: 500;
-    font-family: 'Poppins', sans-serif;
     transition: color 0.3s;
 }
 
@@ -83,15 +90,12 @@ nav a:hover {
 }
 
 .intro-title {
-    font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 36px;
     margin-bottom: 10px;
 }
 
 .intro-description {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
     font-size: 16px;
     margin: 0;
 }
@@ -101,8 +105,6 @@ nav a:hover {
     border: none;
     border-radius: 3px;
     padding: 20px 35px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
     font-size: 14px;
     color: #000;
     cursor: pointer;
