--- a/Responsive hero header/style.css
+++ b/Responsive hero header/style.css
@@ -170,7 +170,9 @@ nav a:hover {
     .intro-description {
         font-size: 1rem;
         display: flex;
-        justify-content: center;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
         margin-top: 5%;
     }
