--- a/Responsive hero header door Xian Van Droogenbroeck/style.css
+++ b/Responsive hero header door Xian Van Droogenbroeck/style.css
@@ -85,13 +85,13 @@ nav a:hover {
 
 .intro-title {
     font-weight: 700;
-    font-size: 36px;
-    margin-bottom: 10px;
+    font-size: 2.25rem;
+    margin-bottom: 2%;
 }
 
 .intro-description {
     width: 50%;
-    font-size: 16px;
+    font-size: 1rem;
     margin: 0;
 }
 
@@ -100,7 +100,7 @@ nav a:hover {
     border: none;
     border-radius: 3px;
     padding: 20px 35px;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #000;
     margin-top: 10%;
     transition: background-color 0.3s;
