--- a/GIP/style.css
+++ b/GIP/style.css
@@ -24,7 +24,7 @@ color: #e4efdb; Licht groen
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 9999;
-    display: none;
+    display: block;
     justify-content: center;
     align-items: center;
 }
