--- a/GIP/style.css
+++ b/GIP/style.css
@@ -841,6 +841,10 @@ textarea:focus {
     }
 
     /*Hamburger*/
+    .no-scroll {
+        overflow: hidden;
+    }
+    
     .navbar-links {
         display: none;
     }
@@ -902,7 +906,6 @@ textarea:focus {
 
     .background-overlay {
         display: none;
-        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
