--- a/GIP/style.css
+++ b/GIP/style.css
@@ -116,8 +116,12 @@ nav a:hover {
 }
 
 .hamburger {
+    position: fixed;
     display: none;
     cursor: pointer;
+    right: 0;
+    top: 0;
+    z-index: 10;
 }
 
 .line-hamburger {
@@ -130,16 +134,16 @@ nav a:hover {
 }
 
 .navbar-links {
-    display: none;
+    display: block;
     flex-direction: column;
 }
 
 .nav-links {
     margin: 10px 0;
+    margin-right: 30px;
     font-size: 24px;
     text-decoration: none;
     color: #333;
-    opacity: 0;
 }
 
 .nav-links:hover {
@@ -841,7 +845,11 @@ textarea:focus {
     }
 
     /*Hamburger*/
-    .no-scroll {
+    .nav-links {
+        opacity: 0;
+    }
+
+    .no-scroll  {
         overflow: hidden;
     }
     
@@ -852,7 +860,7 @@ textarea:focus {
     .hamburger {
         display: block;
         margin-right: 3%;
-        z-index: 5;
+        z-index: 99999;
     }
 
     nav.active .line-hamburger:nth-child(1) {
@@ -891,8 +899,8 @@ textarea:focus {
         height: 100vh;
         padding: 20px;
         z-index: 99999;
-        align-items: center; /* Center the nav links */
-        justify-content: center; /* Center the nav links */
+        align-items: center;
+        justify-content: center;
     }
     
     .nav-links {
@@ -901,7 +909,7 @@ textarea:focus {
         text-decoration: none;
         color: #333;
         opacity: 0;
-        text-align: center; /* Center text within nav links */
+        text-align: center;
     }
 
     .background-overlay {
@@ -911,7 +919,6 @@ textarea:focus {
         width: 100%;
         height: 100%;
         background-color: #f9f9f9;
-        z-index: 2;
         animation: slideDown 0.5s ease forwards;
     }
     
@@ -931,7 +938,7 @@ textarea:focus {
     nav.active .navbar-links {
         display: flex;
         flex-direction: column;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
